--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           repository: rgp-paleocapa/receiver  # Change to the target repo's name
           ref: master  # Specify the branch in the target repo you want to push to (main or others)
-          token: ${{ secrets.GITHUB_TOKEN }}  # Use the personal access token for authentication
+          token: ${{ secrets.TARGET_REPO_TOKEN }}  # Use the personal access token for authentication
 
       - name: Verify checkout
         run: |
