--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,27 +47,27 @@ jobs:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
 
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: production-files
-          path: ./dist
+    #   - name: Download artifact
+    #     uses: actions/download-artifact@v4
+    #     with:
+    #       name: production-files
+    #       path: ./dist
 
-      - name: Verify downloaded files
-        run: |
-          echo "Verifying contents of dist directory after downloading:"
-          ls -la ./dist  # List files to ensure they were downloaded
-          echo "Checking for specific files:"
-          if test -f ./dist/index.html; then
-            echo "index.html exists."
-          else
-            echo "index.html does NOT exist."
-          fi
-          if test -f ./dist/vite.svg; then
-            echo "vite.svg exists."
-          else
-            echo "vite.svg does NOT exist."
-          fi
+    #   - name: Verify downloaded files
+    #     run: |
+    #       echo "Verifying contents of dist directory after downloading:"
+    #       ls -la ./dist  # List files to ensure they were downloaded
+    #       echo "Checking for specific files:"
+    #       if test -f ./dist/index.html; then
+    #         echo "index.html exists."
+    #       else
+    #         echo "index.html does NOT exist."
+    #       fi
+    #       if test -f ./dist/vite.svg; then
+    #         echo "vite.svg exists."
+    #       else
+    #         echo "vite.svg does NOT exist."
+    #       fi
 
       - name: Print working directory
         run: |
@@ -86,6 +86,12 @@ jobs:
           repository: rgp-paleocapa/receiver  # Change to the target repo's name
           ref: master  # Specify the branch in the target repo you want to push to
           token: ${{ secrets.TARGET_REPO_TOKEN }}  # Use the personal access token for authentication
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+            name: production-files
+            path: ./dist
 
       - name: Verify downloaded files
         run: |
