--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,6 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Verify contents of dist directory before upload
-        run: |
-          echo "Contents of dist directory:"
-          ls -la ./dist  # List files to confirm they exist
-
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
         with:
@@ -47,38 +42,37 @@ jobs:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
 
     steps:
-    #   - name: Download artifact
-    #     uses: actions/download-artifact@v4
-    #     with:
-    #       name: production-files
-    #       path: ./dist
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: production-files
+          path: ./dist
 
-    #   - name: Verify downloaded files
-    #     run: |
-    #       echo "Verifying contents of dist directory after downloading:"
-    #       ls -la ./dist  # List files to ensure they were downloaded
-    #       echo "Checking for specific files:"
-    #       if test -f ./dist/index.html; then
-    #         echo "index.html exists."
-    #       else
-    #         echo "index.html does NOT exist."
-    #       fi
-    #       if test -f ./dist/vite.svg; then
-    #         echo "vite.svg exists."
-    #       else
-    #         echo "vite.svg does NOT exist."
-    #       fi
+      - name: Verify downloaded files
+        run: |
+          echo "Verifying contents of dist directory after downloading:"
+          ls -la ./dist  # List files to ensure they were downloaded
+          echo "Checking for specific files:"
+          if test -f ./dist/index.html; then
+            echo "index.html exists."
+          else
+            echo "index.html does NOT exist."
+          fi
+          if test -f ./dist/vite.svg; then
+            echo "vite.svg exists."
+          else
+            echo "vite.svg does NOT exist."
+          fi
 
       - name: Print working directory
         run: |
           echo "Current working directory: $(pwd)"
           ls -la  # List all files in the current directory
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+      - name: Prepare to checkout the target repository
+        run: |
+          echo "Copying dist to a temporary location..."
+          cp -r ./dist ../dist-temp  # Copy to a temp directory outside the current repo context
 
       - name: Checkout the target repository
         uses: actions/checkout@v4
@@ -87,27 +81,11 @@ jobs:
           ref: master  # Specify the branch in the target repo you want to push to
           token: ${{ secrets.TARGET_REPO_TOKEN }}  # Use the personal access token for authentication
 
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-            name: production-files
-            path: ./dist
-
-      - name: Verify downloaded files
+      - name: Restore dist from temporary location
         run: |
-            echo "Verifying contents of dist directory after downloading:"
-            ls -la ./dist  # List files to ensure they were downloaded
-            echo "Checking for specific files:"
-            if test -f ./dist/index.html; then
-                echo "index.html exists."
-            else
-                echo "index.html does NOT exist."
-            fi
-            if test -f ./dist/vite.svg; then
-                echo "vite.svg exists."
-            else
-                echo "vite.svg does NOT exist."
-            fi
+          echo "Restoring dist from temporary location..."
+          cp -r ../dist-temp/* ./  # Copy files back to the current directory (target repo)
+          echo "Files restored to the target repository."
 
       - name: Clear target repo and prepare for copying files
         run: |
