--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,14 +88,37 @@ jobs:
 
       - name: Copy built files to target repository
         run: |
-          echo "Attempting to copy files from dist to target repo..."
-          if [ -d "./dist" ] && [ "$(ls -A ./dist)" ]; then
-            cp -r ./dist/* ./  # Copy all files and subdirectories from dist to the current directory (target repo)
-            echo "Files copied from dist to target repo."
-          else
-            echo "No files found in dist to copy."
-            exit 1  # Fail the step if dist is empty or does not exist
-          fi
+            echo "Attempting to copy files from dist to target repo..."
+            
+            # Check if the 'dist' directory exists and is not empty
+            if [ -d "./dist" ] && [ "$(ls -A ./dist)" ]; then
+              cp -r ./dist/* ./  # Copy all files and subdirectories from dist to the current directory (target repo)
+              echo "Files copied from dist to target repo."
+            else
+              echo "No files found in dist. Checking for alternative directories..."
+              
+              # Check for other potential directories
+              alternative_dirs=("build" "out" "public")  # List alternative directories to check
+              
+              found_files=false  # Flag to track if any files are found
+              
+              for dir in "${alternative_dirs[@]}"; do
+                if [ -d "./$dir" ] && [ "$(ls -A ./$dir)" ]; then
+                  echo "Found files in $dir. Copying files to target repo..."
+                  cp -r ./$dir/* ./  # Copy all files and subdirectories from alternative directory to the current directory (target repo)
+                  echo "Files copied from $dir to target repo."
+                  found_files=true  # Set flag to true
+                  break  # Exit loop after copying
+                fi
+              done
+              
+              # If no files were found in any directories
+              if [ "$found_files" = false ]; then
+                echo "No files found in dist or alternative directories."
+                exit 1  # Fail the step if no files were found
+              fi
+            fi
+        
 
       - name: Push to target repository
         run: |
