--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,13 +23,16 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run lint
-        run: npm run lint
-
+      - name: Set VITE_BASE_URL
+        id: set_base_url
+        run: echo "VITE_BASE_URL=${{ secrets.VITE_BASE_URL || '/sender/' }}" >> $GITHUB_ENV
+      
       - name: Build project
         env:
-          VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}
-        run: npm run build
+          VITE_BASE_URL: ${{ env.VITE_BASE_URL }}
+        run: |
+          echo "Building project with VITE_BASE_URL: $VITE_BASE_URL"
+          npm run build      
 
       - name: Check dist contents before upload
         run: ls -la ./dist  # List files to ensure they were built
