--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Deploy
 on:
   push:
     branches:
-      - $default-branch 
+      - main
+      - master
 
 jobs:
   build:
@@ -21,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
+      
       - name: Build project for primary repo
         env:
           VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}  # Default base URL
@@ -39,10 +40,11 @@ jobs:
           path: ./dist
 
   deploy:
-    name: Deploy to GitHub Pages
+    name: Deploy
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/$default-branch' }}
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -60,7 +62,7 @@ jobs:
     name: Deploy to Second Repo
     needs: build
     runs-on: ubuntu-latest
-    if: ${{ startsWith(github.ref, 'refs/tags/') && github.ref == 'refs/heads/$default-branch' }}
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout the source repo
@@ -87,9 +89,9 @@ jobs:
       - name: Checkout the target repository
         uses: actions/checkout@v4
         with:
-          repository: rgp-paleocapa/receiver  # Target repo name
+          repository: rgp-paleocapa/receiver  # Change to the target repo's name
           ref: master  # Specify the branch in the target repo
-          token: ${{ secrets.TARGET_REPO_TOKEN }}  # Use personal access token
+          token: ${{ secrets.TARGET_REPO_TOKEN }}  # Use the personal access token
           path: ./receiver
 
       - name: Clear target repo and prepare for copying files
@@ -98,12 +100,12 @@ jobs:
       - name: Copy rebuilt files to target repository
         run: |
           if [ -d "./dist" ] && [ "$(ls -A ./dist)" ]; then
-            cp -r ./dist/* ./receiver/  # Copy all files to the target repo
+            cp -r ./dist/* ./receiver/  # Copy all files and subdirectories from dist to the target repo
           else
             echo "No files found in dist."
             exit 1  # Fail the step if no files were found
           fi
-
+        
       - name: Push to target repository
         run: |
           cd ./receiver  # Change to the target repo directory
