--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       
       - name: Build project for primary repo
         env:
-          VITE_BASE_URL: ${{ secrets.VITE_BASE_URL }}  # Default base URL
+          VITE_BASE_URL: './'  # Default base URL
         run: |
           echo "Building project with VITE_BASE_URL: $VITE_BASE_URL"
           npm run build
@@ -78,7 +78,7 @@ jobs:
 
       - name: Rebuild project with VITE_BASE_URL for second repo
         env:
-          VITE_BASE_URL: '/receiver/'  # Base URL for the target repo
+          VITE_BASE_URL: './'  # Base URL for the target repo
         run: |
           echo "Rebuilding project with VITE_BASE_URL: $VITE_BASE_URL"
           npm run build
