--- a/.github/workflows/deploy-to-second-repo.yml
+++ b/.github/workflows/deploy-to-second-repo.yml
@@ -1,20 +1,21 @@
-name: Deploy
+# .github/workflows/deploy-to-second-repo.yml
+
+name: Build and Deploy to Second Repo
 
 on:
   push:
-    branches:
-      - main
-      - master
+    tags:
+      - '*'  # Trigger on any tag push
 
 jobs:
-  build:
-    name: Build and Lint
+  build-and-deploy:
+    name: Build and Deploy to Second Repo
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
+        
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -23,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       
-      - name: Build project for primary repo
+      - name: Build project
         env:
           VITE_BASE_URL: './'  # Default base URL
         run: |
@@ -32,44 +33,6 @@ jobs:
 
       - name: Check dist contents before upload
         run: ls -la ./dist  # List files to ensure they were built
-
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v4
-        with:
-          name: production-files
-          path: ./dist
-
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: production-files
-          path: ./dist
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-
-  deploy-to-second-repo:
-    name: Deploy to Second Repo
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/') && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: production-files
-          path: ./dist
 
       - name: Checkout the target repository
         uses: actions/checkout@v4 
