fix: 2nd workflow awaits gh-pages worfklow to end

--- a/.github/workflows/deploy-to-second-repo.yml
+++ b/.github/workflows/deploy-to-second-repo.yml
@@ -6,6 +6,10 @@ on:
   push:
     tags:
       - '*'  # Trigger on any tag push
+  workflow_run:
+    workflows: ["Deploy"]  # Name of the first workflow to wait for
+    types:
+      - completed  # Trigger this workflow only when the "Deploy" workflow is completed
 
 jobs:
   build-and-deploy:
